# swagger.yaml
@@ -79,16 +79,16 @@ paths:
           description: "Invalid video ID supplied"
         "404":
           description: "Video not found"
-  /videos/{videoId}/comments:
+  /comments:
     get:
-      summary: "Retrieve comments a video"
+      summary: "Retrieve comments for a video"
       produces:
         - "application/json"
       parameters:
         - name: "videoId"
-          in: "path"
+          in: "query"
           description: "ID of video"
-          required: true
+          required: false
           type: "integer"
           format: "int64"
       responses:
@@ -100,8 +100,6 @@ paths:
               $ref: "#/definitions/Comment"
         "400":
           description: "Invalid video ID supplied"
-        "404":
-          description: "Video not found"
   /videos/{videoId}/vote/#{vote}:
     put:
       summary: "Thumbs up or down for a video"
@@ -161,49 +159,47 @@ definitions:
         type: "string"
         format: "dateTime"
   Page:
-    type: "object"
-    required:
-      - "id"
-      - "title"
-      - "path"
-      - "timestamps"
-    properties:
-      id:
-        type: "integer"
-        format: "int54"
-      title:
-        type: "string"
-      path:
-        type: "string"
-      timestamps:
-        $ref: "#/definitions/Timestamps"
+    allOf:
+      - $ref: "#/definitions/Timestamps"
+      - type: "object"
+        required:
+          - "id"
+          - "title"
+          - "path"
+        properties:
+          id:
+            type: "integer"
+            format: "int54"
+          title:
+            type: "string"
+          path:
+            type: "string"
   Video:
-    type: "object"
-    required:
-      - "id"
-      - "pageId"
-      - "title"
-      - "uri"
-      - "thumbnail"
-      - "measurement"
-      - "timestamps"
-    properties:
-      id:
-        type: "integer"
-        format: "int64"
-      pageId:
-        type: "integer"
-        format: "int64"
-      title:
-        type: "string"
-      uri:
-        type: "string"
-      thumbnail:
-        type: "string"
-      measurement:
-        $ref: "#/definitions/Measurement"
-      timestamps:
-        $ref: "#/definitions/Timestamps"
+    allOf:
+      - $ref: "#/definitions/Timestamps"
+      - type: "object"
+        required:
+          - "id"
+          - "pageId"
+          - "title"
+          - "uri"
+          - "thumbnail"
+          - "measurement"
+        properties:
+          id:
+            type: "integer"
+            format: "int64"
+          pageId:
+            type: "integer"
+            format: "int64"
+          title:
+            type: "string"
+          uri:
+            type: "string"
+          thumbnail:
+            type: "string"
+          measurement:
+            $ref: "#/definitions/Measurement"
   Measurement:
     type: "object"
     required:
@@ -221,40 +217,39 @@ definitions:
         type: "integer"
         format: "int32"
   Comment:
-    type: "object"
-    required:
-      - "id"
-      - "videoId"
-      - "text"
-      - "user"
-      - "timestamps"
-    properties:
-      id:
-        type: "integer"
-        format: "int64"
-      videoId:
-        type: "integer"
-        format: "int64"
-      text:
-        type: "string"
-      user:
-        $ref: "#/definitions/User"
-      timestamps:
-        $ref: "#/definitions/Timestamps"
+    allOf:
+      - $ref: "#/definitions/Timestamps"
+      - type: "object"
+        required:
+          - "id"
+          - "videoId"
+          - "text"
+          - "user"
+        properties:
+          id:
+            type: "integer"
+            format: "int64"
+          videoId:
+            type: "integer"
+            format: "int64"
+          text:
+            type: "string"
+          user:
+            $ref: "#/definitions/User"
+        
   User:
-    type: "object"
-    required:
-      - "id"
-      - "firstName"
-      - "lastName"
-      - "timestamps"
-    properties:
-      id:
-        type: "integer"
-        format: "int64"
-      firstName:
-        type: "string"
-      lastName:
-        type: "string"
-      timestamps:
-        $ref: "#/definitions/Timestamps"
+    allOf:
+      - $ref: "#/definitions/Timestamps"
+      - type: "object"
+        required:
+          - "id"
+          - "firstName"
+          - "lastName"
+        properties:
+          id:
+            type: "integer"
+            format: "int64"
+          firstName:
+            type: "string"
+          lastName:
+            type: "string"
